--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "deps/stb"]
 	path = deps/stb
 	url = https://github.com/nothings/stb.git
+[submodule "deps/ifs_layeredfs"]
+	path = deps/ifs_layeredfs
+	url = https://github.com/mon/ifs_layeredfs.git
