--- a/assets/launcher-ui/package.json
+++ b/assets/launcher-ui/package.json
@@ -12,6 +12,11 @@
     "type-check": "vue-tsc --build --force && saucer embed dist ../../src/client/resources/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "saucer-app": "^4.2.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -23,6 +28,7 @@
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.0",
+    "sass": "^1.77.8",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
