add iidx assets and bundle assets into ci build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,10 @@ jobs:
         run: msbuild /m /v:minimal /p:Configuration=${{matrix.configuration}} /p:Platform=x64 build/laochan-client.sln
 
       - name: Upload ${{matrix.configuration}} binaries
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{matrix.configuration}} binaries
           path: |
             build/bin/x64/${{matrix.configuration}}/laochan_bootstrap64.exe
             build/bin/x64/${{matrix.configuration}}/laochan_bootstrap64.pdb
+            data/assets
