--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/nothings/stb.git
 [submodule "deps/ifs_layeredfs"]
 	path = deps/ifs_layeredfs
-	url = https://github.com/GEEKiDoS/ifs_layeredfs/git
+	url = https://github.com/GEEKiDoS/ifs_layeredfs.git
