--- a/assets/launcher-ui/tsconfig.app.json
+++ b/assets/launcher-ui/tsconfig.app.json
@@ -6,6 +6,7 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "types": [ "@types/wicg-file-system-access"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
