--- a/src/client/resource.g.rc
+++ b/src/client/resource.g.rc
@@ -7,9 +7,11 @@ ID_ASSET_0	RCDATA	"resources/ui-dist/favicon.ico"
 ID_ASSET_1	RCDATA	"resources/ui-dist/index.html"
 ID_ASSET_2	RCDATA	"resources/ui-dist/assets/howler-CCqh-U3u.js"
 ID_ASSET_3	RCDATA	"resources/ui-dist/assets/iidx-BAOXvOlX.jpg"
-ID_ASSET_4	RCDATA	"resources/ui-dist/assets/index-Ci4vBWtd.css"
-ID_ASSET_5	RCDATA	"resources/ui-dist/assets/index-D3Snp9-p.js"
+ID_ASSET_4	RCDATA	"resources/ui-dist/assets/index-B-vfAE1K.css"
+ID_ASSET_5	RCDATA	"resources/ui-dist/assets/index-C_kzkGaT.js"
 ID_ASSET_6	RCDATA	"resources/ui-dist/assets/moai-bg-BU2gdkgA.jpg"
-ID_ASSET_7	RCDATA	"resources/ui-dist/assets/num-BvRoq2n1.png"
-ID_ASSET_8	RCDATA	"resources/ui-dist/assets/num-z0VsZKpR.mp3"
-ID_ASSET_9	RCDATA	"resources/ui-dist/assets/sdvx-BIdRBwi8.jpg"
+ID_ASSET_7	RCDATA	"resources/ui-dist/assets/msyhsb-CG5zefP1.woff2"
+ID_ASSET_8	RCDATA	"resources/ui-dist/assets/num-BvRoq2n1.png"
+ID_ASSET_9	RCDATA	"resources/ui-dist/assets/num-z0VsZKpR.mp3"
+ID_ASSET_10	RCDATA	"resources/ui-dist/assets/sdvx-BIdRBwi8.jpg"
+ID_ASSET_11	RCDATA	"resources/ui-dist/assets/sgm-BpMyBNft.woff2"
