--- a/assets/launcher-ui/package.json
+++ b/assets/launcher-ui/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@mongodb-js/zstd": "^2.0.0",
     "@vueuse/sound": "^2.0.1",
     "dedent": "^1.5.3",
     "saucer-app": "^4.2.3",
