--- a/src/client/resource.g.rc
+++ b/src/client/resource.g.rc
@@ -3,16 +3,16 @@
 
 #include "resource.hpp"
 
-ID_ASSET_0      RCDATA  "resources/ui-dist/favicon.ico"
-ID_ASSET_1      RCDATA  "resources/ui-dist/index.html"
-ID_ASSET_2      RCDATA  "resources/ui-dist/assets/gitadora-cQ1BqJ9U.webm"
-ID_ASSET_3      RCDATA  "resources/ui-dist/assets/howler-CTWA-ZGT.js"
-ID_ASSET_4      RCDATA  "resources/ui-dist/assets/iidx-BAOXvOlX.jpg"
-ID_ASSET_5      RCDATA  "resources/ui-dist/assets/index-BGCGHj6k.css"
-ID_ASSET_6      RCDATA  "resources/ui-dist/assets/index-D1NvJlV7.js"
-ID_ASSET_7      RCDATA  "resources/ui-dist/assets/moai-bg-BU2gdkgA.jpg"
-ID_ASSET_8      RCDATA  "resources/ui-dist/assets/msyhsb-CG5zefP1.woff2"
-ID_ASSET_9      RCDATA  "resources/ui-dist/assets/num-BvRoq2n1.png"
-ID_ASSET_10     RCDATA  "resources/ui-dist/assets/num-z0VsZKpR.mp3"
-ID_ASSET_11     RCDATA  "resources/ui-dist/assets/sdvx-BIdRBwi8.jpg"
-ID_ASSET_12     RCDATA  "resources/ui-dist/assets/sgm-BpMyBNft.woff2"
+ID_ASSET_0	RCDATA	"resources/ui-dist/favicon.ico.zst"
+ID_ASSET_1	RCDATA	"resources/ui-dist/index.html.zst"
+ID_ASSET_2	RCDATA	"resources/ui-dist/assets/gitadora-cQ1BqJ9U.webm.zst"
+ID_ASSET_3	RCDATA	"resources/ui-dist/assets/howler-BCY0WR7Z.js.zst"
+ID_ASSET_4	RCDATA	"resources/ui-dist/assets/iidx-DT5rYYhv.jpg.zst"
+ID_ASSET_5	RCDATA	"resources/ui-dist/assets/index-Bxdf4pjc.css.zst"
+ID_ASSET_6	RCDATA	"resources/ui-dist/assets/index-YFm_oXHH.js.zst"
+ID_ASSET_7	RCDATA	"resources/ui-dist/assets/moai-bg-B0rTMPYn.jpg.zst"
+ID_ASSET_8	RCDATA	"resources/ui-dist/assets/msyhsb-teYSJU3-.woff2.zst"
+ID_ASSET_9	RCDATA	"resources/ui-dist/assets/num-DOiIrgmq.jpg.zst"
+ID_ASSET_10	RCDATA	"resources/ui-dist/assets/num-z0VsZKpR.mp3.zst"
+ID_ASSET_11	RCDATA	"resources/ui-dist/assets/sdvx-Dhf-gkrM.jpg.zst"
+ID_ASSET_12	RCDATA	"resources/ui-dist/assets/sgm-BpMyBNft.woff2"
