new ui almost complete

--- a/src/client/resource.g.rc
+++ b/src/client/resource.g.rc
@@ -5,15 +5,22 @@
 
 ID_ASSET_0	RCDATA	"resources/ui-dist/favicon.ico.zst"
 ID_ASSET_1	RCDATA	"resources/ui-dist/index.html.zst"
-ID_ASSET_2	RCDATA	"resources/ui-dist/assets/ddr_bg-fLY37mO8.jpg.zst"
-ID_ASSET_3	RCDATA	"resources/ui-dist/assets/gitadora-cQ1BqJ9U.webm.zst"
-ID_ASSET_4	RCDATA	"resources/ui-dist/assets/howler-DR5KLX7K.js.zst"
-ID_ASSET_5	RCDATA	"resources/ui-dist/assets/iidx-DT5rYYhv.jpg.zst"
-ID_ASSET_6	RCDATA	"resources/ui-dist/assets/index-CKVSAlyU.js.zst"
-ID_ASSET_7	RCDATA	"resources/ui-dist/assets/index-ClnFtsrN.css.zst"
-ID_ASSET_8	RCDATA	"resources/ui-dist/assets/moai-bg-B0rTMPYn.jpg.zst"
-ID_ASSET_9	RCDATA	"resources/ui-dist/assets/msyhsb-teYSJU3-.woff2.zst"
-ID_ASSET_10	RCDATA	"resources/ui-dist/assets/num-DOiIrgmq.jpg.zst"
-ID_ASSET_11	RCDATA	"resources/ui-dist/assets/num-z0VsZKpR.mp3.zst"
-ID_ASSET_12	RCDATA	"resources/ui-dist/assets/sdvx-Dhf-gkrM.jpg.zst"
-ID_ASSET_13	RCDATA	"resources/ui-dist/assets/sgm-BpMyBNft.woff2"
+ID_ASSET_2	RCDATA	"resources/ui-dist/assets/aero-CZ6BZh4F.png.zst"
+ID_ASSET_3	RCDATA	"resources/ui-dist/assets/ddr-BmtkgcJb.webp"
+ID_ASSET_4	RCDATA	"resources/ui-dist/assets/ddr-LCq_LvSa.ico.zst"
+ID_ASSET_5	RCDATA	"resources/ui-dist/assets/dm_chara-Bmqo60mo.png.zst"
+ID_ASSET_6	RCDATA	"resources/ui-dist/assets/gf_chara-B0QvKm_g.png.zst"
+ID_ASSET_7	RCDATA	"resources/ui-dist/assets/gitadora-DFqMpK2F.jpg.zst"
+ID_ASSET_8	RCDATA	"resources/ui-dist/assets/gtdr-sRWUTLFt.ico.zst"
+ID_ASSET_9	RCDATA	"resources/ui-dist/assets/howler-DR5KLX7K.js.zst"
+ID_ASSET_10	RCDATA	"resources/ui-dist/assets/iidx-CFUAx3V2.jpg.zst"
+ID_ASSET_11	RCDATA	"resources/ui-dist/assets/iidx-CigaWHLQ.ico.zst"
+ID_ASSET_12	RCDATA	"resources/ui-dist/assets/iidx_chara-B1fwrXHd.png.zst"
+ID_ASSET_13	RCDATA	"resources/ui-dist/assets/index-4X6i6iAI.js.zst"
+ID_ASSET_14	RCDATA	"resources/ui-dist/assets/index-BQs-F9gV.css.zst"
+ID_ASSET_15	RCDATA	"resources/ui-dist/assets/msyhsb-teYSJU3-.woff2.zst"
+ID_ASSET_16	RCDATA	"resources/ui-dist/assets/num-DOiIrgmq.jpg.zst"
+ID_ASSET_17	RCDATA	"resources/ui-dist/assets/num-z0VsZKpR.mp3.zst"
+ID_ASSET_18	RCDATA	"resources/ui-dist/assets/sdvx-OL-KBV4E.jpg.zst"
+ID_ASSET_19	RCDATA	"resources/ui-dist/assets/sdvx-R2F0Wv1S.ico.zst"
+ID_ASSET_20	RCDATA	"resources/ui-dist/assets/sgm-BpMyBNft.woff2"
