--- a/assets/launcher-ui/package.json
+++ b/assets/launcher-ui/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@mongodb-js/zstd": "^2.0.0",
     "@vueuse/sound": "^2.0.1",
+    "7.css": "^0.18.0",
     "dedent": "^1.5.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
